# marong

./: .gitignore  .gitmodules  CMakeLists.txt  Chinese.md  Dockerfile  README.md  README.zh.md
.config/: settings.json
include/marong/: exp.h  gpt.h  helper.h  marong.h  music.h  user.h
src/: exp.cpp  gpt.cpp  helper.cpp  main  main.cpp  music.cpp  user.cpp
